kubernetes/apps/sonarr/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: homelab-local-ca
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sonarr.local
        - sonarr.lan
      secretName: sonarr-local-tls
  rules:
    - host: sonarr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
    - host: sonarr.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
